This file documents the revision history for the Monitoring Webinterface Thruk.


1.86     Thu Jan  8 14:10:41 CET 2015
          - add custom action menu
          - livestatus performance improvements
          - updated jquery to 1.11.1
          - added new configuration setting: max_process_memory
          - add excel export permanent link (awiddersheim)
          - increased logcache int size
          - use grey performance bars on extinfo page
          - Business Process:
            - fix zoom on large business objects
          - Mobile:
            - updated jquery mobile
            - respect escape_html_tags setting from cgi.cfg
            - old themes have been replaced with 2 new ones
          - Reporting:
            - support url reports from external urls
          - Panorama View:
            - added show details/refresh links to icons
            - add 'center' position option for labels
            - changeable icon filter types
            - fixed memory leak in generic url panel
            - fixed problem with stopped timers after import
            - reload every x hours to prevent noncatchable memory leaks
            - fixed linking public dashboards
          - Bug Fixes
            - fixed problem with timeperiods in logcache database
            - fixed show_custom_vars with wildcards
            - fixed adding dummy function in business processes
            - fixed startup page in safari browser
            - fixed css problem in mobile client

1.84-6   Wed Aug  6 11:24:12 CEST 2014
          - Panorama View:
            - support availability results in labels and speedometer

1.84-5   Wed Jul 16 13:30:05 CEST 2014
          - Reports
            - added cancel button for running reports
            - added progres bar for running reports
          - Panorama View:
            - added -or filter to all filter panels
            - added optional min/max values for speedometer
            - added invert switch for speedometer