@@ -674,6 +674,9 @@ cookie_auth_session_cache_timeout = 5
     # execute regular scheduled reports with this nice level
     #report_nice_level = 5
 
+    # maximum number of running reports at a time
+    #max_concurrent_reports = 2
+
     # url used to replace relative links in html reports
     #report_base_url=http://host.local/thruk/cgi-bin/
 
